# clink-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  clients.yaml  pyproject.toml
docs/: 2026-03-22-testing-and-context-notes.md
docs/plans/: 2026-03-18-clink-mcp-design.md  2026-03-18-clink-mcp-implementation.md  2026-03-22-context-bundle-hardening.md  2026-03-22-observable-and-honest-milestone.md  2026-03-22-orchestrator-ready-minimum.md  2026-03-22-testgen-role-design.md  2026-03-22-transport-hardening-and-context-precision.md  2026-03-23-codex-routing-skill-and-cli-wrapper.md
prompts/: codereview.txt  consult.txt  docgen.txt  testgen.txt
src/clink_mcp/: __init__.py  cli.py  config.py  context.py  parsers.py  server.py  transport.py
tests/: smoke_test.sh  test_cli.py  test_config.py  test_context.py  test_parsers.py  test_server.py  test_transport.py
